fixed format config.json

--- a/config.json
+++ b/config.json
@@ -1,40 +1,35 @@
-[
-    {
-        "tasks": [{
-            "type" : "youtube",
-            "description" : "Супер Крылья",
-            "local_path" : "/Users/galo/Downloads/video",
-            "urls" : [
-                "https://www.youtube.com/watch?v=8eud2ZQHK1s",
-                "https://www.youtube.com/watch?v=8eud2ZQHK1s",
-                "https://www.youtube.com/watch?v=8eud2ZQHK1s"
-            ]   
-        }],
-    "enable" : true 
-    },
-    {
-        "tasks": [{
-            "type" : "youtube",
-            "description" : "Супер Крылья",
-            "local_path" : "/Users/galo/Downloads/video",
-            "urls" : [
-                "https://www.youtube.com/watch?v=8eud2ZQHK1s",
-                "https://www.youtube.com/watch?v=8eud2ZQHK1s",
-                "https://www.youtube.com/watch?v=8eud2ZQHK1s"
-            ]   
-        }],
-    "enable" : true 
-    },
-    {
-        "tasks": [{
-            "type" : "playlist",
-            "description" : "незнайка",
-            "local_path" : "/Users/galo/Downloads/video/незнайка",
-            "urls" : [
-                "https://www.youtube.com/watch?v=fjwF0sCbDtE&list=PL7x1DJTKugPDlSaK0UHPavBovuK8qT38f"
-                
-            ]   
-        }],
-        "enable" : true 
-        }
-]
+{ 
+    "tasks" : [ 
+       { 
+          "type" : "youtube" , 
+          "description" : "Супер Крылья" , 
+          "local_path" : "/Users/galo/Downloads/video" , 
+          "urls" : [ 
+             "https: / /www.youtube.com/watch?v=8eud2ZQHK1s " , 
+             " https://www.youtube.com/watch?v=8eud2ZQHK1s " , 
+             " https://www.youtube.com/watch?v=8eud2ZQHK1s " 
+          ] , 
+          "enable" : true 
+       } , 
+       { 
+          "type" : "youtube" ,
+          "description" : "Чип и Дейл" ,
+          "local_path" : "/Users/galo/Downloads/video" , 
+          "urls" : [ 
+             "https://www.youtube.com/watch?v=8eud2ZQHK1s" , 
+             "https://www.youtube.com / watch? v = 8eud2ZQHK1s " , 
+             " https://www.youtube.com/watch?v=8eud2ZQHK1s " 
+          ] , 
+          "enable" : false 
+       } , 
+       { 
+          "type" : "playlist" , 
+          "description" : " Все серии камеди клаба за 2009 " , 
+          "local_path" : " /Users/galo/Downloads/video " , 
+          "urls" :[ 
+             "https://www.youtube.com/watch?v=fjwF0sCbDtE&list=PL7x1DJTKugPDlSaK0UHPavBovuK8qT38f" 
+          ] ,
+          "enable" : true 
+       } 
+    ] 
+ }
