--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -16,20 +16,21 @@ jobs:
         python-version: [3.8]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@master
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run: |
-        scripts/install_deps
+      run: pip3 install -r requirements-pip.txt -r requirements.txt -r requirements-test.txt
+    
     - name: Lint
-      run: |
-        scripts/lint
+      run: python3 -m pylint ytbdownloader/
         
     - name: Test
-      run: |
-        scripts/test
+      run: coverage run -m pytest
+
+    - name: Tests report
+      run: coverage report
 
         
