--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -6,3 +6,9 @@ coveralls==3.2.0
 autopep8==1.5.7
 pytest-timeout==1.4.2
 pytest-xdist==2.3.0
+pytest-html==3.1.1
+pytest-metadata==1.11.0
+click==8.0.3
+genbadge==1.0.6
+pillow==8.4.0
+defusedxml==0.7.1
