--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -2,9 +2,11 @@ name: Quality Checks
 
 on:
   push:
-    # branches: [ master ]
+    branches:
+      - '*'
   pull_request:
-    # branches: [ master ]
+    branches:
+      - '*'
   workflow_dispatch:
 
 jobs:
@@ -16,9 +18,9 @@ jobs:
         python-version: [3.8]
 
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
